[Web] Add Items : logic
